set up basic frontend framework with header and container

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 </head>
 
 <body>
-    <div class="loader" id="loader"></div>
-    <div class="container" id="container"></div>
+    <div class="site-container">
+        <header class="site-header">
+            <div class="header-title-main">70 Years of Conflicts</div>
+        </header>
+        <main class="site-content"></main>
+    </div>
     <script src="main.js"></script>
 </body>
 
