set up ready for d3 work

--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">70 Years of Conflicts</div>
+            <div class="header-title-main">Early Warning Project</div>
         </header>
-        <main class="site-content"></main>
+        <main class="site-content">
+            <div class="site-content-left"></div>
+            <div class="site-content-right">
+                <div class="chart-header">Order by: Chronological | Casualties</div>
+                <div class="chart-main"></div>
+            </div>
+        </main>
+        <footer class="site-footer">
+            <div class="footer-title-main">About this project</div>
+        </footer>
     </div>
     <script src="main.js"></script>
 </body>
