--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">Early Warning Project</div>
+            <div class="header-title-main">70 Years of Conflict</div>
         </header>
         <main class="site-content">
             <div class="site-content-left"></div>
             <div class="site-content-right">
-                <div class="chart-header">Order by: Chronological | Casualties</div>
+                <div class="chart-header"><strong>Order by:</strong> Chronological | Casualties</div>
                 <div class="chart-main"></div>
             </div>
         </main>
         <footer class="site-footer">
             <div class="footer-title-main">About this project</div>
+            <div class="footer-title-sub">Created by Drew Leonard</div>
         </footer>
     </div>
     <script src="main.js"></script>
