--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             </div>
         </main>
         <footer class="site-footer">
-            <div class="footer-title-main">About this project</div>
+            <div class="footer-title-main">
+                <a href="https://github.com/drewleonard/ewp-conflict/blob/master/README.md">About this project</a>
+            </div>
             <!-- <a class="footer-title-github">
     <use xlink:href=#Octicons-mark-github.svg></use>
 </a> -->
