--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>EWP Conflicts</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="topojson.min.js"></script>
 </head>
 
 <body>
@@ -16,7 +17,10 @@
             <div class="header-title-main">70 Years of Conflict</div>
         </header>
         <main class="site-content">
-            <div class="site-content-left"></div>
+            <div class="site-content-left">
+                <div class="information"></div>
+                <div class="map"></div>
+            </div>
             <div class="site-content-right">
                 <div class="chart-button">
                     <div class="chart-bold">Order by:</div>
