added zoom interaction for map

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">70 Years of Conflict</div>
+            <div class="header-title-main">PITF Conflicts</div>
         </header>
         <main class="site-content">
             <div class="site-content-left">
