--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </main>
         <footer class="site-footer">
             <div class="footer-title-main">
-                <a href="https://github.com/drewleonard/ewp-conflict/blob/master/README.md">About this project</a>
+                <a href="https://github.com/drewleonard/ewp-conflict/blob/master/README.md" target="_blank">About this project</a>
             </div>
             <!-- <a class="footer-title-github">
     <use xlink:href=#Octicons-mark-github.svg></use>
@@ -44,6 +44,7 @@
             <div class="footer-title-sub">Created by Drew Leonard</div>
         </footer>
     </div>
+    <div class="tooltip"></div>
     <script src="main.js"></script>
 </body>
 
