--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">PITF Conflicts</div>
+            <div class="header-title-main">Mass Killings</div>
         </header>
         <main class="site-content">
             <div class="site-content-left">
@@ -29,7 +29,7 @@
                             <label class="radiobutton label-selected">
                                 <input type="radio" name="thefields" onclick="orderByDeath()" checked="checked">number of deaths</label>
                             <label class="radiobutton">
-                                <input type="radio" name="thefields" onclick="orderByDate()">Chronological order</label>
+                                <input type="radio" name="thefields" onclick="orderByDate()">year</label>
                         </form>
                     </div>
                     <div class="button-color">
