--- a/index.html
+++ b/index.html
@@ -14,34 +14,38 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">Mass Killings</div>
+            <div class="header-title-main">Insurgency</div>
         </header>
         <main class="site-content">
             <div class="site-content-left">
                 <div class="information"></div>
+                <div class="refine">
+                    <div class="refine-button">Refine</div>
+                    <div class="refine-selector">Selector</div>
+                </div>
                 <div class="map"></div>
             </div>
             <div class="site-content-right">
-                <div class="chart-button">
-                    <div class="button-order">
-                        <div class="chart-bold">Order by:</div>
-                        <form>
-                            <label class="radiobutton label-selected">
-                                <input type="radio" name="thefields" onclick="orderByDeath()" checked="checked">number of deaths</label>
-                            <label class="radiobutton">
-                                <input type="radio" name="thefields" onclick="orderByDate()">year</label>
-                        </form>
-                    </div>
-                    <div class="button-color">
-                        <div class="chart-bold">Color by:</div>
-                        <form>
-                            <label class="radiobutton">
-                                <input type="radio" name="thefields" onclick="colorByRegion()">region</label>
-                            <label class="radiobutton label-selected">
-                                <input type="radio" name="thefields" onclick="removeColor()" checked="checked">none</label>
-                        </form>
-                    </div>
-                </div>
+                <!-- <div class="chart-button">
+    <div class="button-order">
+        <div class="chart-bold">Order by:</div>
+        <form>
+            <label class="radiobutton label-selected">
+                <input type="radio" name="thefields" onclick="orderByDeath()" checked="checked">number of deaths</label>
+            <label class="radiobutton">
+                <input type="radio" name="thefields" onclick="orderByDate()">year</label>
+        </form>
+    </div>
+    <div class="button-color">
+        <div class="chart-bold">Color by:</div>
+        <form>
+            <label class="radiobutton">
+                <input type="radio" name="thefields" onclick="colorByRegion()">region</label>
+            <label class="radiobutton label-selected">
+                <input type="radio" name="thefields" onclick="removeColor()" checked="checked">none</label>
+        </form>
+    </div>
+</div> -->
                 <div class="chart-main"></div>
             </div>
         </main>
