--- a/index.html
+++ b/index.html
@@ -21,31 +21,22 @@
                 <div class="information"></div>
                 <div class="refine">
                     <div class="refine-button">Refine</div>
-                    <div class="refine-selector">Selector</div>
+                    <div class="refine-selector">
+                        <div class="refine-flex-container">
+                            <div class="refine-order-label">Order by:</div>
+                            <div class="refine-order label-selected" onclick="orderByDeath()">deaths</div>
+                            <div class="refine-order" onclick="orderByDate()">date</div>
+                        </div>
+                        <div class="refine-flex-container">
+                            <div class="refine-order-label">Color by:</div>
+                            <div class="refine-order label-selected" onclick="removeColor()">none</div>
+                            <div class="refine-order" onclick="colorByRegion()">region</div>
+                        </div>
+                    </div>
                 </div>
                 <div class="map"></div>
             </div>
             <div class="site-content-right">
-                <!-- <div class="chart-button">
-    <div class="button-order">
-        <div class="chart-bold">Order by:</div>
-        <form>
-            <label class="radiobutton label-selected">
-                <input type="radio" name="thefields" onclick="orderByDeath()" checked="checked">number of deaths</label>
-            <label class="radiobutton">
-                <input type="radio" name="thefields" onclick="orderByDate()">year</label>
-        </form>
-    </div>
-    <div class="button-color">
-        <div class="chart-bold">Color by:</div>
-        <form>
-            <label class="radiobutton">
-                <input type="radio" name="thefields" onclick="colorByRegion()">region</label>
-            <label class="radiobutton label-selected">
-                <input type="radio" name="thefields" onclick="removeColor()" checked="checked">none</label>
-        </form>
-    </div>
-</div> -->
                 <div class="chart-main"></div>
             </div>
         </main>
