--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,400i,500,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="utf-8">
     <title>EWP Conflicts</title>
@@ -18,7 +18,14 @@
         </header>
         <main class="site-content">
             <div class="site-content-left">
-                <div class="information"></div>
+                <div class="information-primary">
+                    <div class="information-primary-text">
+                        Use this tool to explore insurgencies of the past 70 years.
+                    </div>
+                    <div class="information-primary-text">
+                        This project is part of the Early Warning Project.
+                    </div>
+                </div>
                 <div class="refine">
                     <div class="refine-button">Refine</div>
                     <div class="refine-selector">
@@ -34,9 +41,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="legend">
+                    <div class="legend-button">Legend</div>
+                </div>
                 <div class="map"></div>
             </div>
             <div class="site-content-right">
+                <div class="chart-legend"></div>
                 <div class="chart-main"></div>
             </div>
         </main>
