added legend to sidebar

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 </div>
                 <div class="legend">
                     <div class="legend-button">Legend</div>
+                    <div class="legend-selector">
+                        <div class="legend-flex-container">
+                            <div class="legend-region-color"></div>
+                            <div class="legend-region-label" id="legend-region-label"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="map"></div>
             </div>
