added framework and first portions of information sidebar

--- a/index.html
+++ b/index.html
@@ -18,16 +18,28 @@
         </header>
         <main class="site-content">
             <div class="site-content-left">
-                <div class="information-primary">
-                    <div class="information-primary-text">
+                <div class="information">
+                    <div class="information-primary">
                         Use this tool to explore insurgencies of the past 70 years.
                     </div>
-                    <div class="information-primary-text">
+                    <div class="information-primary">
                         This project is part of the Early Warning Project.
+                    </div>
+                    <div class="information-country">
+                        <div class="information-country-country"></div>
+                        <div class="information-country-shortdescription"></div>
+                        <div class="information-country-year">
+                            <div class="information-country-year-label">Years</div>
+                            <div class="information-country-year-value"></div>
+                        </div>
+                        <div class="information-country-death">
+                            <div class="information-country-death-label">Deaths</div>
+                            <div class="information-country-death-value"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="refine">
-                    <div class="refine-button">Refine</div>
+                    <div class="refine-button">Filter</div>
                     <div class="refine-selector">
                         <div class="refine-flex-container">
                             <div class="refine-order-label">Order by:</div>
