made left column fully scrollable and footer sized and positioned properly

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                             <div class="information-country-death-label">Deaths</div>
                             <div class="information-country-death-value"></div>
                         </div>
+                        <div class="information-country-victim">
+                            <div class="information-country-victim-label">Victims</div>
+                            <div class="information-country-victim-value"></div>
+                        </div>
+                        <div class="information-country-region">
+                            <div class="information-country-region-label">Region</div>
+                            <div class="information-country-region-value"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="refine">
