added functionality for clicking on chart (rather than bars)

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                             <div class="information-country-region-label">Region</div>
                             <div class="information-country-region-value"></div>
                         </div>
+                        <!-- <div class="information-country-note">
+                            <div class="information-country-note-label">Details</div>
+                            <div class="information-country-note-value"></div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="refine">
@@ -74,7 +78,7 @@
             </div>
             <div class="site-content-right">
                 <div class="chart-legend"></div>
-                <div class="chart-main"></div>
+                <div id="chart-main" class="chart-main"></div>
             </div>
         </main>
         <footer class="site-footer">
