preparing for first bl.ocks test

--- a/index.html
+++ b/index.html
@@ -36,22 +36,28 @@
                             <div class="information-country-death-label">Deaths</div>
                             <div class="information-country-death-value"></div>
                         </div>
-                        <div class="information-country-victim">
+                        <!-- <div class="information-country-victim">
                             <div class="information-country-victim-label">Victims</div>
                             <div class="information-country-victim-value"></div>
-                        </div>
+                        </div> -->
                         <div class="information-country-region">
                             <div class="information-country-region-label">Region</div>
                             <div class="information-country-region-value"></div>
                         </div>
-                        <!-- <div class="information-country-note">
+                        <div class="information-country-note">
                             <div class="information-country-note-label">Details</div>
                             <div class="information-country-note-value"></div>
-                        </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="statistic">
+                    <div class="statistic-button">Statistics</div>
+                    <div class="statistic-selector">
+                        <div class="statistic-flex-container"></div>
                     </div>
                 </div>
                 <div class="refine">
-                    <div class="refine-button">Filter</div>
+                    <div class="refine-button">Refine</div>
                     <div class="refine-selector">
                         <div class="refine-flex-container">
                             <div class="refine-order-label">Order by:</div>
