added svg icon for details button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
                         </div>
                         <div class="information-country-note">
                             <div class="information-country-note-label">Details</div>
-                            <div class="information-country-note-value"></div>
+                            <div class="information-country-note-value">
+                                <svg class="downarrow">
+                                    <use xlink:href="angle-arrow-down.svg#Capa_1"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
