added details section on left bar

--- a/index.html
+++ b/index.html
@@ -36,21 +36,18 @@
                             <div class="information-country-death-label">Deaths</div>
                             <div class="information-country-death-value"></div>
                         </div>
-                        <!-- <div class="information-country-victim">
-                            <div class="information-country-victim-label">Victims</div>
-                            <div class="information-country-victim-value"></div>
-                        </div> -->
                         <div class="information-country-region">
                             <div class="information-country-region-label">Region</div>
                             <div class="information-country-region-value"></div>
                         </div>
-                        <div class="information-country-note">
-                            <div class="information-country-note-label">Details</div>
-                            <div class="information-country-note-value">
-                                <svg class="downarrow">
-                                    <use xlink:href="angle-arrow-down.svg#Capa_1"></use>
+                        <div class="information-country-note-container">
+                            <div class="information-country-note">
+                                <div class="information-country-note-label">Details</div>
+                                <svg class="details-arrow">
+                                    <use xlink:href="sort-down.svg#Capa_1"></use>
                                 </svg>
                             </div>
+                            <div class="information-country-note-value"></div>
                         </div>
                     </div>
                 </div>
