--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div class="information-country-note-container">
                             <div class="information-country-note">
                                 <div class="information-country-note-label">Details</div>
-                                <svg class="details-arrow">
+                                <svg id="details-arrow" class="details-arrow">
                                     <use xlink:href="sort-down.svg#Capa_1"></use>
                                 </svg>
                             </div>
@@ -52,13 +52,23 @@
                     </div>
                 </div>
                 <div class="statistic">
-                    <div class="statistic-button">Statistics</div>
+                    <div class="statistic-button-container">
+                        <div class="statistic-button">Statistics</div>
+                        <svg id="details-arrow" class="details-arrow">
+                            <use xlink:href="sort-down.svg#Capa_1"></use>
+                        </svg>
+                    </div>
                     <div class="statistic-selector">
                         <div class="statistic-flex-container"></div>
                     </div>
                 </div>
                 <div class="refine">
-                    <div class="refine-button">Refine</div>
+                    <div class="refine-button-container">
+                        <div class="refine-button">Refine</div>
+                        <svg id="refine-arrow" class="details-arrow">
+                            <use xlink:href="sort-down.svg#Capa_1"></use>
+                        </svg>
+                    </div>
                     <div class="refine-selector">
                         <div class="refine-flex-container">
                             <div class="refine-order-label">Order by:</div>
@@ -73,7 +83,12 @@
                     </div>
                 </div>
                 <div class="legend">
-                    <div class="legend-button">Legend</div>
+                    <div class="legend-button-container">
+                        <div class="legend-button">Legend</div>
+                        <svg id="legend-arrow" class="details-arrow">
+                            <use xlink:href="sort-down.svg#Capa_1"></use>
+                        </svg>
+                    </div>
                     <div class="legend-selector">
                         <div class="legend-flex-container">
                             <div class="legend-region-color"></div>
