fixed sidebar legend framework

--- a/index.html
+++ b/index.html
@@ -89,10 +89,13 @@
                             <use xlink:href="sort-down.svg#Capa_1"></use>
                         </svg>
                     </div>
-                    <div class="legend-selector">
-                        <div class="legend-flex-container">
-                            <div class="legend-region-color"></div>
-                            <div class="legend-region-label" id="legend-region-label"></div>
+                    <div class="legend-wrapper">
+                        <div class="legend-default">Default</div>
+                        <div class="legend-selector">
+                            <div class="legend-flex-container">
+                                <div class="legend-region-color"></div>
+                                <div class="legend-region-label"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
