added default legend

--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@
                         </svg>
                     </div>
                     <div class="legend-wrapper">
-                        <div class="legend-default">Default</div>
-                        <div class="legend-selector">
-                            <div class="legend-flex-container">
+                        <div class="legend-default">
+                            <div class="legend-default-flex">
+                                <div class="legend-default-color"></div>
+                                <div class="legend-default-label"></div>
+                            </div>
+                        </div>
+                        <div class="legend-region">
+                            <div class="legend-region-flex">
                                 <div class="legend-region-color"></div>
                                 <div class="legend-region-label"></div>
                             </div>
