added dictionary for setting the legend

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                                 <div class="legend-default-label"></div>
                             </div>
                         </div>
+                        <div class="legend-selected">
+                            <div class="legend-selected-flex">
+                                <div class="legend-selected-color"></div>
+                                <div class="legend-selected-label"></div>
+                            </div>
+                        </div>
                         <div class="legend-region">
                             <div class="legend-region-flex">
                                 <div class="legend-region-color"></div>
