changed title and description

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <div class="site-container">
         <header class="site-header">
-            <div class="header-title-main">Insurgency</div>
+            <div class="header-title-main">Repression</div>
         </header>
         <main class="site-content">
             <div class="site-content-left">
                 <div class="information">
                     <div class="information-primary">
-                        Use this tool to explore insurgencies of the past 70 years.
+                        Use this tool to explore episodes of political repression of the past 70 years.
                     </div>
                     <div class="information-primary">
                         This project is part of the Early Warning Project.
