added functionality between interactivity on map and the side bar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <main class="site-content">
             <div class="site-content-left">
                 <div class="information">
-                    <div class="information-primary">
+                    <div class="information-primary information-child">
                         Use this tool to explore episodes of political repression of the past 70 years.
                     </div>
-                    <div class="information-primary">
+                    <div class="information-primary information-child">
                         This project is part of the Early Warning Project.
                     </div>
-                    <div class="information-country">
+                    <div class="information-country information-child">
                         <div class="information-country-country"></div>
                         <div class="information-country-shortdescription"></div>
                         <div class="information-country-year">
@@ -52,7 +52,7 @@
                             <div class="information-country-note-value"></div>
                         </div>
                     </div>
-                    <div class="information-country-click">
+                    <div class="information-country-click information-child">
                         <div class="information-country-click-country"></div>
                         <div class="information-country-click-instructions"></div>
                     </div>
