--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="loader" id="loader"></div>
     <div class="site-container">
         <header class="site-header">
             <div class="header-title-main">Repression</div>
