--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <div class="information-country-click-instructions"></div>
                     </div>
                 </div>
-                <div class="statistic">
+                <!-- <div class="statistic">
                     <div class="statistic-button-container">
                         <div class="statistic-button">Statistics</div>
                         <svg id="details-arrow" class="details-arrow">
@@ -67,7 +67,7 @@
                     <div class="statistic-selector">
                         <div class="statistic-flex-container"></div>
                     </div>
-                </div>
+                </div> -->
                 <div class="refine">
                     <div class="refine-button-container">
                         <div class="refine-button">Refine</div>
