added instructions on left bar default div

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
                     <div class="information-primary information-child">
                         This project is part of the Early Warning Project.
                     </div>
+                    <ul class="information-primary information-primary-instruction-title information-child">
+                        Instructions:
+                        <li class="information-primary information-primary-instruction information-child">
+                            Hover and click on bars, plotted to the right, to learn about each episode of repression
+                        </li>
+                        <li class="information-primary information-primary-instruction information-child">
+                            Select the "Refine" tab to filter the data and form different conclusions
+                        </li>
+                        <li class="information-primary information-primary-instruction information-child">
+                            Select the "Legend" tab to understand the chart's coloring scheme
+                        </li>
+                        <li class="information-primary information-primary-instruction information-child">
+                            Click on countries, pan, and zoom the map below to learn about each country's history of repression
+                        </li>
+                        <li class="information-primary information-primary-instruction information-child">
+                            Click empty spaces on the map and chart to reset the tool from individual episodes or countries
+                        </li>
+                    </ul>
                     <div class="information-country information-child">
                         <div class="information-country-country"></div>
                         <div class="information-country-shortdescription"></div>
