created working function and color scheme for coloring events by number of deaths

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="site-content-left">
                 <div class="information">
                     <div class="information-primary information-child">
-                        Use this tool to explore episodes of political repression of the past 70 years.
+                        Use this tool to explore episodes of political repression since 1945.
                     </div>
                     <div class="information-primary information-child">
                         This project is part of the Early Warning Project.
@@ -103,6 +103,7 @@
                             <div class="refine-order-label">Color by:</div>
                             <div class="refine-order label-selected" onclick="removeColor()">none</div>
                             <div class="refine-order" onclick="colorByRegion()">region</div>
+                            <div class="refine-order" onclick="colorByDeath()">deaths</div>
                         </div>
                     </div>
                 </div>
