added function to close and open legends dynamically

--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@
                         </svg>
                     </div>
                     <div class="legend-wrapper">
-                        <div class="legend-default">
+                        <div class="legend-default legend-wrapper-child">
                             <div class="legend-default-flex">
                                 <div class="legend-default-color"></div>
                                 <div class="legend-default-label"></div>
                             </div>
                         </div>
-                        <div class="legend-selected">
+                        <div class="legend-selected legend-wrapper-child">
                             <div class="legend-selected-flex">
                                 <div class="legend-selected-color"></div>
                                 <div class="legend-selected-label"></div>
                             </div>
                         </div>
-                        <div class="legend-region">
+                        <div class="legend-region legend-wrapper-child">
                             <div class="legend-region-flex">
                                 <div class="legend-region-color"></div>
                                 <div class="legend-region-label"></div>
