finished color scheme for deaths

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="legend">
-                    <div class="legend-button-container">
+                    <div class="legend-button-container" id="legend-button-container">
                         <div class="legend-button">Legend</div>
                         <svg id="legend-arrow" class="details-arrow">
                             <use xlink:href="sort-down.svg#Capa_1"></use>
@@ -131,6 +131,12 @@
                             <div class="legend-region-flex">
                                 <div class="legend-region-color"></div>
                                 <div class="legend-region-label"></div>
+                            </div>
+                        </div>
+                        <div class="legend-death legend-wrapper-child">
+                            <div class="legend-death-flex">
+                                <div class="legend-death-color"></div>
+                                <div class="legend-death-label"></div>
                             </div>
                         </div>
                     </div>
