changed map pointer

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                             Select the "Refine" tab to filter the data and form different conclusions
                         </li>
                         <li class="information-primary information-primary-instruction information-child">
-                            Select the "Legend" tab to understand the chart's coloring scheme
+                            Select the "Legend" tab to understand the chart's current coloring scheme
                         </li>
                         <li class="information-primary information-primary-instruction information-child">
-                            Click on countries, pan, and zoom the map below to learn about each country's history of repression
+                            Zoom, pan, and click countries on the map below to learn about each country's history of repression
                         </li>
                         <li class="information-primary information-primary-instruction information-child">
                             Click empty spaces on the map and chart to reset the tool from individual episodes or countries
