added github logo with link to footer

--- a/index.html
+++ b/index.html
@@ -152,10 +152,16 @@
             <div class="footer-title-main">
                 <a href="https://github.com/drewleonard/ewp-conflict/blob/master/README.md" target="_blank">About this project</a>
             </div>
-            <!-- <a class="footer-title-github">
-    <use xlink:href=#Octicons-mark-github.svg></use>
-</a> -->
-            <div class="footer-title-sub">Created by Drew Leonard</div>
+            <div class="footer-title-sub-wrapper">
+                <div class="footer-title-sub">Created by Drew Leonard</div>
+                <a href="https://github.com/drewleonard/" target="_blank">
+                    <div class="footer-title-sub-octocat">
+                        <svg id="octocat" class="octocat">
+                            <use xlink:href="github-logo.svg#octocat"></use>
+                        </svg>
+                    </div>
+                </a>
+            </div>
         </footer>
     </div>
     <div class="tooltip"></div>
