--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="utf-8">
     <title>EWP Conflicts</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.10.0/d3.min.js"></script> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
     <script src="d3.min.js"></script>
-    <script src="jquery-3.2.1.min.js"></script>
+    <script src="jquery.js"></script>
     <script src="topojson.min.js"></script>
 </head>
 
 <body>
+    <div class="loader" id="loader"></div>
     <div class="site-container">
         <header class="site-header">
             <div class="header-title-main">Repression</div>
